# beets-extrafiles

./: .pre-commit-config.yaml  pyproject.toml  setup.py
beetsplug/: __init__.py  extrafiles.py
tests/: test_extrafiles.py
