[build-system]
requires = ["setuptools>=61.2", "setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "beets-extrafiles"
dynamic = ["version"]
authors = [ { name = "Jan Holthuis", email = "holthuis.jan@gmail.com" } ]
license = { text = "MIT" }
description = "A plugin for beets that copies additional files and directories during the import process."
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "beets>=1.4.7",
    "mediafile>=0.9.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = ["beetsplug"]

[tool.setuptools_scm]
